refactor: 重构代码架构，新增事件驱动、审计日志、还款计算器、规格模式等功能
- 新增事件驱动架构：DomainEvent、EventBus、事件处理器及监听器
- 新增审计日志系统：AuditAspect、SecurityAspect、操作日志记录
- 新增还款计算器策略模式：支持等额本息、等额本金、先息后本、气球贷、到期一次性还款
- 新增规格模式：客户校验规则（年龄、收入、黑名单、手机号唯一性等）
- 新增 DTO 映射层：EntityMapper 及各实体映射器
- 重构 Controller 层：统一异常处理、优化接口响应
- 重构 Service 层：提取接口、优化业务逻辑
- 重构前端 credit-admin：统一 API 请求封装、类型定义、优化页面交互
- 新增集成测试 CreditSystemIntegrationTest
- 更新测试用例，覆盖重构后的业务逻辑
- 新增项目文档：CONTEXT.md、CONTEXT-MAP.md、ADR 决策记录